--- a/rc.local.sample
+++ b/rc.local.sample
@@ -14,7 +14,7 @@ mount -t cifs //ca-nas101.unimaas.nl/M4I-nano-scratchdata /home/pi/pr-screen/ser
 -o credentials=/home/pi/pr-screen/cifs-credentials,auto,nounix,noserverino,uid=pr-screen,gid=pr-screen,vers=1.0
 
 # Start the viewer process
-sudo -u pi sh -c '/usr/bin/python3 -u /home/pi/pr-screen/4k-screen/viewerd.py --skip > /home/pi/pr-screen/4k-screen-log.txt 2>&1' &
+sudo -u pi sh -c 'DISPLAY=:0 /usr/bin/python3 -u /home/pi/pr-screen/4k-screen/viewerd.py --skip > /home/pi/pr-screen/4k-screen-log.txt 2>&1' &
 
 # Launch Chromium browser in full screen mode
 sudo -u pi DISPLAY=:0 chromium-browser --noerrdialogs --disable-infobars --kiosk 'https://wikiscopy.unimaas.nl/panel/current_sessions_panel' &
